add some modif