@@ -1,9 +1,7 @@
 package ui.fx;
 
 /**
- * Launcher separat care nu extinde Application.
- * Asta evita problemele cu sistemul de module al JavaFX cand rulam din IntelliJ
- * fara --add-modules.
+ * launcher separat care nu extinde Application
  */
 public class Launcher {
     public static void main(String[] args) {
